--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,14 +27,14 @@
         </style>
     </head>
     <body>
-      <h1>RiverFort</h1>
-      <h3>_your portable stocks portfolio_</h3>
-
-      <h6><a href="./privacy-policy.html">Privacy Policy</a></h6>
+      <h1>Privacy Policy</h1>
+      <h6><a href="./index.html">Home</a></h6>
+      <p>The RiverFort app does not collect or store personally identifying information.</p>
 
       <div id="footer">
         <p>The RiverFort app was built by <a href="https://sites.google.com/view/qiuyangnie" target="_blank"><strong>Qiuyang Nie</strong></a> and <a><strong>Gayatri Bhadane</strong></a>.</p>
         <p>Powered by <a href="https://riverfort.com/" target="_blank"><strong>RiverFort Global Capital Ltd</strong>.</a></p>
       </div>
+
     </body>
 </html>
