--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,31 +1,33 @@
-<html lang="en">
-    <head>
-        <title>RiverFort - your portable stocks portfolio</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com"> 
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Castoro&family=Libre+Baskerville&display=swap" rel="stylesheet">
-        <style>    
-            body {
-                background-color: #fffff8;
-                margin:50px auto;
-                line-height: 1.5;
-                max-width: 41em;
-                text-align: justify;
-                font-family: 'Castoro', serif;
-                font-family: 'Libre Baskerville', serif;
-            }
-            h1 {
-                font-family: 'Libre Baskerville', serif;
-            }
-            a {
-              color: inherit; /* blue colors for links too */
-              text-decoration: inherit; /* no underline */
-            }
-        </style>
-    </head>
-    <body>
-      <h1>Privacy Policy</h1>
-      <h6><a href="./index.html">Home</a></h6>
-      <p>The RiverFort app does not collect or store personally identifying information.</p>
-    </body>
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<body class="w3-content" style="max-width:1200px">
+
+<div class="w3-panel">
+  <i class="w3-xlarge fa fa-bars"></i>
+</div>
+<!-- First Grid: Logo & About -->
+<div class="w3-row">
+<div class="w3-half w3-container">
+  <!-- <h1 class="w3-xxlarge w3-text-light-grey">Hello</h1> -->
+  <h1 class="w3-xxlarge w3-text-grey">RiverFort App</h1>
+  <h1 class="w3-jumbo">Privacy Policy</h1>
+</div>
+<div class="w3-half w3-container w3-xlarge w3-text-grey">
+  <p class="">The RiverFort app does not collect or store personally identifying information.</p>
+</div>
+</div>
+
+<!-- Footer -->
+<div class="w3-row w3-section">
+  <div class="w3-third w3-container w3-black w3-large" style="height:250px">
+    <h2>Support</h2>
+    <p><i class="fa fa-envelope" style="width:30px"> </i> Email: qyang.nie@getvisibility.com</p>
+  </div>
+
+</body>
 </html>
