--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Privacy Policy - RiverFort app</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -24,7 +24,7 @@
 
 <!-- Footer -->
 <div class="w3-row w3-section">
-  <div class="w3-third w3-container w3-black w3-large" style="height:250px">
+  <div class="w3-third w3-container w3-black w3-large" style="height:350px">
     <h2>Support</h2>
     <p><i class="fa fa-envelope" style="width:30px"> </i> Email: qyang.nie@getvisibility.com</p>
   </div>
